sdm660: Holds shortcuts key and power key to take screenshots
Change-Id: Id97f31f88894e16ee74a8c712025b560085e93bc

--- a/overlay-lineage/lineage-sdk/lineage/res/res/values/config.xml
+++ b/overlay-lineage/lineage-sdk/lineage/res/res/values/config.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2018 The MoKee Open Source Project
+     Copyright (C) 2018-2019 The MoKee Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -65,6 +65,18 @@
          For example, a device with Home, Back and Menu keys would set this
          config to 7. -->
     <integer name="config_deviceHardwareWakeKeys">96</integer>
+
+    <!-- Paths to the libraries that contain device specific key handlers -->
+    <string-array name="config_deviceKeyHandlerLibs" translatable="false">
+        <item>/system/priv-app/MKParts/MKParts.apk</item>
+        <item>/system/priv-app/KeyHandlerSmartisan/KeyHandlerSmartisan.apk</item>
+    </string-array>
+
+    <!-- Names of the key handler classes -->
+    <string-array name="config_deviceKeyHandlerClasses" translatable="false">
+        <item>org.mokee.mkparts.gestures.KeyHandler</item>
+        <item>org.mokee.settings.device.smartisan.KeyHandler</item>
+    </string-array>
 
     <!-- Whether device has screen with higher aspect ratio -->
     <bool name="config_haveHigherAspectRatioScreen">true</bool>
